k3s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: na-fali
  labels:
    app.kubernetes.io/part-of: na-fali
